--- a/package.json
+++ b/package.json
@@ -11,25 +11,39 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
+    "basic-auth-connect": "^1.0.0",
     "bcryptjs": "^2.4.3",
+    "busboy": "^0.3.1",
+    "connect-busboy": "0.0.2",
+    "express": "^4.17.1",
     "level": "^6.0.1",
     "loglevel": "^1.7.1",
     "tslib": "^1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-typescript": "^7.12.16",
     "@oclif/dev-cli": "^1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/busboy": "^0.2.3",
+    "@types/connect-busboy": "0.0.2",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/level-js": "^4.0.1",
-    "@types/node": "^10",
+    "@types/mock-fs": "^4.13.0",
+    "@types/node": "^14.14.27",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
     "globby": "^10",
+    "jest": "^26.6.3",
+    "mock-fs": "^4.13.0",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^8",
-    "typescript": "^3.3"
+    "typescript": "^4.1.4"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=14.14.0"
   },
   "files": [
     "/bin",
@@ -60,7 +74,7 @@
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-    "test": "echo NO TESTS",
+    "test": "jest",
     "version": "oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts"
