--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-typescript": "^7.12.16",
     "@oclif/dev-cli": "^1",
+    "@oclif/test": "^1.2.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/busboy": "^0.2.3",
     "@types/connect-busboy": "0.0.2",
@@ -32,12 +33,15 @@
     "@types/level-js": "^4.0.1",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "^14.14.27",
+    "chai": "^4.3.0",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
     "globby": "^10",
     "jest": "^26.6.3",
     "mock-fs": "^4.13.0",
+    "sinon": "^9.2.4",
+    "ts-jest": "^26.5.1",
     "ts-mockito": "^2.6.1",
     "ts-node": "^8",
     "typescript": "^4.1.4"
