--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "direct-upload-ts",
-  "description": "Direct Upload service and command line",
+  "name": "tellaweb-backend",
+  "description": "Direct Upload service and command line for Tella Web",
   "version": "0.0.1",
-  "author": "marcos@hzontal.org",
+  "author": "admin@hzontal.org",
   "bin": {
-    "direct-upload-ts": "./bin/run"
+    "tellaweb-backend": "./bin/run"
   },
-  "bugs": "https://github.com/horizontal-org/direct-upload-ts/issues",
+  "bugs": "https://github.com/horizontal-org/tellaweb-backend/issues",
   "dependencies": {
     "@oclif/command": "^1",
     "@oclif/config": "^1",
@@ -16,7 +16,6 @@
     "busboy": "^0.3.1",
     "connect-busboy": "0.0.2",
     "express": "^4.17.1",
-    "level": "^6.0.1",
     "loglevel": "^1.7.1",
     "tslib": "^1"
   },
@@ -30,7 +29,6 @@
     "@types/connect-busboy": "0.0.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
-    "@types/level-js": "^4.0.1",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "^14.14.27",
     "chai": "^4.3.0",
@@ -40,11 +38,9 @@
     "globby": "^10",
     "jest": "^26.6.3",
     "mock-fs": "^4.13.0",
-    "sinon": "^9.2.4",
-    "ts-jest": "^26.5.1",
     "ts-mockito": "^2.6.1",
     "ts-node": "^8",
-    "typescript": "^4.1.4"
+    "typescript": "^3.3"
   },
   "engines": {
     "node": ">=14.14.0"
@@ -55,7 +51,7 @@
     "/npm-shrinkwrap.json",
     "/oclif.manifest.json"
   ],
-  "homepage": "https://github.com/horizontal-org/direct-upload-ts",
+  "homepage": "https://github.com/horizontal-org/tellaweb-backend",
   "keywords": [
     "oclif"
   ],
@@ -63,7 +59,7 @@
   "main": "lib/index.js",
   "oclif": {
     "commands": "./lib/commands",
-    "bin": "direct-upload-ts",
+    "bin": "tellaweb-backend",
     "plugins": [
       "@oclif/plugin-help"
     ],
@@ -73,7 +69,7 @@
       }
     }
   },
-  "repository": "horizontal-org/direct-upload-ts",
+  "repository": "horizontal-org/tellaweb-backend",
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc",
