--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-busboy": "0.0.2",
     "express": "^4.17.1",
     "loglevel": "^1.7.1",
+    "remove": "^0.1.5",
     "tslib": "^1"
   },
   "devDependencies": {
@@ -26,9 +27,10 @@
     "@oclif/test": "^1.2.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/busboy": "^0.2.3",
+    "@types/chai": "^4.2.15",
     "@types/connect-busboy": "0.0.2",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.20",
+    "@types/mocha": "^8.2.1",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "^14.14.27",
     "chai": "^4.3.0",
@@ -36,10 +38,12 @@
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
     "globby": "^10",
-    "jest": "^26.6.3",
+    "mocha": "^8.3.0",
     "mock-fs": "^4.13.0",
+    "sinon": "^9.2.4",
+    "ts-mocha": "^8.0.0",
     "ts-mockito": "^2.6.1",
-    "ts-node": "^8",
+    "ts-node": "^8.10.2",
     "typescript": "^3.3"
   },
   "engines": {
@@ -72,9 +76,8 @@
   "repository": "horizontal-org/tellaweb-backend",
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
-    "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-    "test": "jest",
+    "test": "ts-mocha -p tsconfig.json --recursive \"src/**/*.spec.ts\"" ,
     "version": "oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts"
