--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "baseUrl":".",
+    "paths": {
+      "basic-auth-connect": ["typings/basic-auth-connect.d.ts"]
+    } 
   },
   "include": [
     "src/**/*"
