--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "ts-mocha -p tsconfig.json --recursive \"src/**/*.spec.ts\"",
-    "test-with-coverage": "nyc --reporter=text ts-mocha -p tsconfig.json --recursive \"src/**/*.spec.ts\"",
+    "coverage": "nyc --reporter=lcov --reporter=text-summary ts-mocha -p tsconfig.json --recursive \"src/**/*.spec.ts\"",
     "version": "oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts",
